--- a/pendidiakn.html
+++ b/pendidiakn.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+    <style>
+        ul.demo{
+            list-style-type:none;
+            margin:0;
+            padding:0;
+        }
+    </style>
     
+<body>
+    <h1>PENDIDIKAN</h1>
+    <p>Ijazah Sarjana Muda Kejuruteraan Perisian <br> University Teknologi Malaysia(UTM)</p>
+    <p>2019 - Sekarang</p>
+    <ul>
+        <li>Purata CGPA:3.75</li>
+    </ul>
+    <p>Diploma Kejuruteraan Perisian <br> Politeknik Sultan Salahuddin Abdul Aziz Shah</p>
+    <p>2016 - 2018</p>
+    <ul>
+        <li>Purata CGPA:3.95</li>
+    </ul>
 </body>
 </html>
